2013-08-01  Charlie Zender  <zender@uci.edu>

	* NCO 4.3.5 release procedure:
 	Changes since nco-4_3_4: fxm
	cd ~/nco;cvs tag -d ncoa-4_3_5;cvs tag -d nco-4_3_5-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.5 release"
	cvs tag -c nco-4_3_5;cvs tag -c nco-4_3_5-1

	* Add stubs for printing braces for compound variables

	* Document ncrename -g

	* Document ncks -5 option for PRN_NEW_FORMAT

	* FC19 will not build current nco.texi, but Ubuntu will. Not sure why.
	Until fixing this, all documentation must be built on Ubuntu.

2013-07-31  Charlie Zender  <zender@uci.edu>

	* NCO 4.3.4 release procedure:
 	Changes since nco-4_3_3: CDL legibility, ncpdq -U fix, --hdf_upk
	cd ~/nco;cvs tag -d nco-4_3_4;cvs tag -d nco-4_3_4-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.4 release"
	cvs tag -c nco-4_3_4;cvs tag -c nco-4_3_4-1

	* Document and test --hdf_upk in all other applicable operators

	* Add ncpdq regression test to re-pack 1D variable from HDF convention to netCDF convention

	* Move header information from nco_netcdf.c to nco_netcdf.h

	* Tidy UDUnits parsing/handling code

	* Standardize UDUnits code on opaque return values, not shell return values

2013-07-29  Charlie Zender  <zender@uci.edu>

	* ncpdq unpacking is broken in 4.3.2-4.3.3 because packing attributes are still written

	* Explode CDL printing of NC_CHAR attributes that contain embedded newlines

	* --hdf_upk flag uses HDF unpack convention: unpacked=scale_factor*(packed-add_offset)

2013-07-26  Charlie Zender  <zender@uci.edu>

	* Document MSA user-ordering --msa_usr_rdr with longitude rotation example

2013-07-25  Charlie Zender  <zender@uci.edu>

	* Update old cruft in index.shtml

	* Fix nco_md5_ini() prototype

	* Fix const'ness of nco_cmp_crd_dpt()

	* Apparently C++ (or at least g++) always provides strcasestr()

	* Restore rnd_nbrf() prototype in nco_rth_flt.h

	* Tighten prototypes in nco_sng_utl.h

2013-07-24  Charlie Zender  <zender@uci.edu>
